update quest visibility etc.